# Satellite-Simulation-openMP-openCL

./: README.md
Satellites1kernel/: CMakeLists.txt  parallel.c  parallel.cl
Satellites2kernel/: CMakeLists.txt  parallel.c  parallel.cl
Satellites2omp/: CMakeLists.txt  parallel.c
SatellitesOriginal/: CMakeLists.txt  parallel.c
